# storm

./: .gitignore  CMakeLists.txt  License.txt  README.md  storm-config.cmake
blender/: io_export_storm.py
cmake/: FindXCB.cmake  FindXkbCommon.cmake
examples/: example_base.h
examples/advanced_rendering/: CMakeLists.txt  advanced_rendering.cpp  pixel_shader.glsl  resources.cpp  resources.h  vertex_shader.glsl
examples/display_query/: CMakeLists.txt  display_query.cpp
examples/triangle_rendering/: CMakeLists.txt  pixel_shader.glsl  triangle_rendering.cpp
examples/user_input/: CMakeLists.txt  user_input.cpp
include/: BlendingTechnique.h  Camera.h  Clock.h  Color.h  CommonVertexTypes.h  Dimensions.h  Display.h  ElementBuffer.h  ElementBufferOperators.h  EventHandler.h  FlatVector.h  Framework.h  IndexBuffer.h  Keyboard.h  MathConstants.h  Matrix.h  Mesh.h  Mouse.h  Noexcept.h  OutputTechnique.h  RasterizationTechnique.h  Rectangle.h  RenderingSystem.h  RenderingWindow.h  ResourceType.h  Sampler.h  Shader.h  ShaderOperators.h  Storm.h  Texture.h  TextureOperators.h  Transformation.h  Vector.h  Vertex.h  VertexBuffer.h
include/storm/: backbuffer.h  blending_technique.h  buffer.h  camera.h  clock.h  color.h  color.inl  common_vertex_types.h  condition.h  dimensions.h  display.h  event_handler.h  event_loop.h  exception.h  flat_vector.h  flat_vector.inl  framebuffer.h  framework.h  gpu_context.h  identifier.h  index_buffer.h  input.h  keyboard.h  math_constants.h  matrix.h  matrix.inl  mesh.h  mouse.h  noexcept.h  output_technique.h  pipeline_state.h  quaternion.h  quaternion.inl  query.h  rasterization_technique.h  rectangle.h  rendering_buffer_set.h  rendering_system.h  rendering_target.h  rendering_window.h  (+12 more)
src/: BlendingTechnique.cpp  Camera.cpp  Color.cpp  CommonVertexTypes.cpp  Dimensions.cpp  DisplayMode.cpp  ElementBuffer.cpp  ElementBufferOperators.cpp  EventHandlerVector.h  Exception.cpp  Exception.h  FlatVector.cpp  HighPrecisionClock.cpp  HighPrecisionClock.h  Matrix.cpp  Mesh.cpp  Noncopyable.h  OutputTechnique.cpp  RasterizationTechnique.cpp  Rectangle.cpp  RenderingSystemCommon.cpp  RenderingSystemCommon.h  Shader.cpp  ShaderCg.cpp  ShaderCg.h  ShaderOperators.cpp  TextureOperators.cpp  Transformation.cpp  Vector.cpp  Vertex.cpp
src/platform/dx9/: BlendingTechniqueDx9.cpp  BlendingTechniqueDx9.h  CoreTypesDx9.h  ElementBufferDx9.cpp  ElementBufferDx9.h  IndexBufferDx9.cpp  IndexBufferDx9.h  MeshDx9.cpp  MeshDx9.h  OutputTechniqueDx9.cpp  OutputTechniqueDx9.h  RasterizationTechniqueDx9.cpp  RasterizationTechniqueDx9.h  RenderingSystemDx9.cpp  RenderingSystemDx9.h  ResourceTypeDx9.cpp  ResourceTypeDx9.h  SamplerDx9.cpp  SamplerDx9.h  ShaderDx9.cpp  ShaderDx9.h  TextureDx9.cpp  TextureDx9.h  VertexBufferDx9.cpp  VertexBufferDx9.h  VertexDx9.cpp  VertexDx9.h
src/platform/ogl/: BlendingTechniqueOgl.cpp  BlendingTechniqueOgl.h  BufferOgl.cpp  BufferOgl.h  CheckResultOgl.h  ConstantsOgl.h  CoreTypesOgl.h  ElementBufferOgl.cpp  ElementBufferOgl.h  FunctionsOgl.h  HandleOgl.h  IndexBufferOgl.cpp  IndexBufferOgl.h  MeshOgl.cpp  MeshOgl.h  OutputTechniqueOgl.cpp  OutputTechniqueOgl.h  RasterizationTechniqueOgl.cpp  RasterizationTechniqueOgl.h  RenderingSystemOgl.cpp  RenderingSystemOgl.h  ResourceTypeOgl.cpp  ResourceTypeOgl.h  SamplerOgl.cpp  SamplerOgl.h  ShaderOgl.cpp  ShaderOgl.h  TextureOgl.cpp  TextureOgl.h  VertexBufferOgl.cpp  VertexBufferOgl.h
src/platform/posix/: ClockPosix.cpp  ClockPosix.h
src/platform/win/: CheckResult.h  ComPointer.h  DisplayWin.cpp  DisplayWin.h  FrameworkWin.cpp  FrameworkWin.h  FunctionsWgl.cpp  InputWin.cpp  InputWin.h  KeyboardWin.cpp  KeyboardWin.h  MouseWin.cpp  MouseWin.h  MultimediaClockWin.cpp  MultimediaClockWin.h  RenderingSystemWgl.cpp  RenderingSystemWgl.h  RenderingWindowWin.cpp  RenderingWindowWin.h  WindowProcedureWin.cpp  WindowProcedureWin.h
src/platform/x11/: DisplayConnectionX11.cpp  DisplayConnectionX11.h  FrameworkX11.cpp  FrameworkX11.h  FunctionsGlx.cpp  RenderingSystemGlx.cpp  RenderingSystemGlx.h  RenderingWindowX11.cpp  RenderingWindowX11.h
src/storm/: binary_input_stream.h  blending_technique.cpp  camera.cpp  color.cpp  common_vertex_types.cpp  dimensions.cpp  display_mode.cpp  event_handler_vector.h  event_loop_common.h  exception.cpp  exception.h  flat_vector.cpp  framebuffer.cpp  high_precision_clock.cpp  high_precision_clock.h  input.cpp  keyboard_common.cpp  keyboard_common.h  matrix.cpp  mesh.cpp  noncopyable.h  observer_list.h  output_technique.cpp  pipeline_state.cpp  proxy_window_observer.cpp  proxy_window_observer.h  quaternion.cpp  rasterization_technique.cpp  rectangle.cpp  rendering_system_common.cpp  rendering_system_common.h  sampler.cpp  shader.cpp  shader_cg.cpp  shader_cg.h  texture.cpp  texture_dds.cpp  texture_dds.h  texture_png.cpp  texture_png.h  (+5 more)
src/storm/ogl/: api_functions_ogl.h  api_ogl.cpp  backbuffer_ogl.cpp  backbuffer_ogl.h  blending_technique_ogl.cpp  blending_technique_ogl.h  buffer_ogl.cpp  buffer_ogl.h  check_result_ogl.h  condition_ogl.cpp  condition_ogl.h  framebuffer_ogl.cpp  framebuffer_ogl.h  gpu_context_ogl.cpp  gpu_context_ogl.h  gpu_context_ogl.inl  handle_ogl.h  mesh_ogl.cpp  mesh_ogl.h  output_technique_ogl.cpp  output_technique_ogl.h  pipeline_state_ogl.cpp  pipeline_state_ogl.h  query_ogl.cpp  query_ogl.h  rasterization_technique_ogl.cpp  rasterization_technique_ogl.h  rendering_system_ogl.cpp  rendering_system_ogl.h  resource_type_ogl.cpp  resource_type_ogl.h  sampler_ogl.cpp  sampler_ogl.h  shader_ogl.cpp  shader_ogl.h  texture_ogl.cpp  texture_ogl.h  texture_storage_ogl.cpp  texture_storage_ogl.h  vertex_format_ogl.cpp  (+1 more)
src/storm/platform/dx9/: blending_technique_dx9.cpp  blending_technique_dx9.h  index_buffer_dx9.cpp  index_buffer_dx9.h  mesh_dx9.cpp  mesh_dx9.h  output_technique_dx9.cpp  output_technique_dx9.h  (+16 more)
src/storm/win/: display.cpp  rendering_system_wgl.cpp  window.cpp
src/storm/x11/: display.cpp  invisible_cursor.cpp  keyboard_state_xkb.cpp  pointer_locking_region.cpp  rendering_system_glx.cpp  window.cpp  xcb_connection.cpp
(+108 files in other folders)
